--- a/en/index.html
+++ b/en/index.html
@@ -3,132 +3,194 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Force no cache for the HTML itself -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <title>Portfolio | Pedro Lourenço</title>
-  <link rel="icon" href="/assets/images/icon.png" type="image/png" />
-  <link rel="stylesheet" href="/style.css" />
+  
+  <!-- Meta Tags for SEO -->
+  <meta name="description" content="Pedro Lourenço's portfolio, Web Developer and Cybersecurity Specialist. Projects, Skills, Contact and more!">
+  <meta name="author" content="Pedro Lourenço">
+  <meta name="keywords" content="Pedro Lourenço, Portfolio, Web Developer, Cybersecurity, Programmer, Projects">
+  <meta property="og:title" content="Pedro Lourenço | Web Developer">
+  <meta property="og:description" content="Explore Pedro Lourenço's portfolio, with projects, skills and contact.">
+  <meta property="og:image" content="assets/images/icon.png?v=20250426">
+  <meta property="og:type" content="website">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Versioned favicon -->
+  <link rel="icon" href="/assets/images/icon.png?v=20250426" type="image/png" />
+
+  <!-- Versioned CSS for forced reload -->
+  <link rel="stylesheet" href="/style.css?v=20250426" />
+
+  <!-- Fonts and icons (externals) -->
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicon@2.14.0/devicon.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
   <!-- Menu -->
   <nav class="navbar">
     <div class="logo">
-      <a href="/en/">Pedro Lourenço</a>
+      <a href="/en">Pedro Lourenço</a>
     </div>
 
-    <div class="menu-icon" onclick="toggleMenu()">
+    <div class="menu-icon" id="menu-icon" onclick="toggleMenu()">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
-    </div>
+    </div>    
 
-    <ul class="menu">
-      <li><a href="/en/">Home</a></li>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="/en/projects/">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
+    <ul class="menu" id="menu">
+      <li><a href="/en"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="#sobre"><i class="fas fa-user"></i> About Me</a></li>
+      <li><a href="projects/"><i class="fas fa-folder-open"></i> Projects</a></li>
+      <li><a href="#contato"><i class="fas fa-envelope"></i> Contact</a></li>
       <li class="lang-selector">
         <div class="current-lang" onclick="toggleDropdown()">
-          <img id="current-flag" src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg" alt="Current Language" style="width: 25px; cursor: pointer;" />
+          <img id="current-flag" src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg" alt="Current Language" style="width: 25px; cursor: pointer;" />
+          <span id="current-lang-text">Português</span>
+          <span class="arrow">&#9660;</span>
         </div>
         <div id="lang-dropdown" class="lang-dropdown">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg" alt="Portuguese" onclick="window.location.href='/'" />
-          <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg" alt="English" onclick="window.location.href='/en/'" />
+          <div onclick="changeLanguage('pt')">
+            <span class="flag-wrapper">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg" alt="Português">
+            </span>
+            <span>Português</span>
+          </div>
+          <div onclick="changeLanguage('en')">
+            <span class="flag-wrapper">
+              <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg" alt="English">
+            </span>
+            <span>English</span>
+          </div>
         </div>
       </li>
     </ul>
   </nav>
 
-  <!-- Sections -->
+  <!-- Portfolio Sections -->
   <header class="hero" id="home">
-    <h1 class="title">Hello, I'm <span>Pedro Lourenço</span></h1>
+    <h1 class="title">Hi! I'm <span>Pedro Lourenço</span></h1>
     <p class="subtitle">Web Developer</p>
   </header>
 
-  <section class="sobre" id="about">
+  <section class="sobre" id="sobre">
     <div class="sobre-container">
       <div class="sobre-img">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShcRw0ZeSaO-1PT_cAy2KizeHQlS8n88yLKA&s" alt="Photo of Pedro Lourenço" />
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShcRw0ZeSaO-1PT_cAy2KizeHQlS8n88yLKA&s" alt="Pedro Lourenço's photo" />
       </div>
 
       <div class="sobre-conteudo">
-        <h2>About Me</h2>
-        <p>
-        I am a developer passionate about technology and cybersecurity. I enjoy turning ideas into practical and creative digital solutions. With experience in various programming languages, I am always eager to learn and explore new technologies to solve real-world problems and deliver high-quality results.
-        </p>
+        <h2>About me</h2>
+        <p>I'm passionate about technology and cybersecurity. I love transforming ideas into practical, creative digital solutions. With experience in various programming languages, I always strive to learn and explore new technologies to solve real‑world problems and deliver quality results.</p>
 
         <nav class="sobre-tabs">
           <span onclick="mostrarConteudo('skills')" class="tab-link ativo">Skills</span>
-          <span onclick="mostrarConteudo('education')" class="tab-link">Education</span>
-          <span onclick="mostrarConteudo('experience')" class="tab-link">Experience</span>
+          <span onclick="mostrarConteudo('educacao')" class="tab-link">Education</span>
+          <span onclick="mostrarConteudo('experiencia')" class="tab-link">Experience</span>
         </nav>
 
         <div class="conteudo-tabs">
           <div id="skills" class="conteudo-tab ativo">
             <div class="skills-container">
-              <!-- Mantém os skills como estão, os ícones são universais -->
-              <div class="skill-item html"><i class="fab fa-html5"></i><span>HTML</span></div>
-              <div class="skill-item css"><i class="fab fa-css3-alt"></i><span>CSS</span></div>
-              <div class="skill-item js"><i class="fab fa-js-square"></i><span>JavaScript</span></div>
-              <div class="skill-item cpp"><i class="devicon-cplusplus-plain"></i><span>C++</span></div>
-              <div class="skill-item c"><i class="devicon-c-plain"></i><span>C</span></div>
-              <div class="skill-item python"><i class="devicon-python-plain"></i><span>Python</span></div>
+              <!-- Linguagens de Programação -->
+              <div class="skill-item html"><i class="devicon-html5-plain colored"></i><span>HTML</span></div>
+              <div class="skill-item css"><i class="devicon-css3-plain colored"></i><span>CSS</span></div>
+              <div class="skill-item js"><i class="devicon-javascript-plain colored"></i><span>JavaScript</span></div>
+              <div class="skill-item c"><i class="devicon-c-plain colored"></i><span>C</span></div>
+              <div class="skill-item cpp"><i class="devicon-cplusplus-plain colored"></i><span>C++</span></div>
+              <div class="skill-item python"><i class="devicon-python-plain colored"></i><span>Python</span></div>
+              <div class="skill-item vb">
+                <img src="/assets/icons/visualbasic.png" alt="Visual Basic" style="width:32px; height:32px; margin-right: 8px;" />
+                <span>Visual Basic</span>
+              </div>
+
+              <!-- Ferramentas de Desenvolvimento -->
+              <div class="skill-item github"><i class="devicon-github-original colored"></i><span>GitHub</span></div>
+              <div class="skill-item vscode"><i class="devicon-vscode-plain colored"></i><span>VS Code</span></div>
+              <div class="skill-item android-studio">
+                <img src="/assets/icons/androidstudio.svg" alt="Android Studio" style="width:32px; height:32px; margin-right: 8px;" />
+                <span>Android Studio</span>
+              </div>
+
+              <!-- Outras Ferramentas -->
+              <div class="skill-item office">
+                <img src="/assets/icons/office.png" alt="Microsoft Office" style="width:32px; height:32px; margin-right: 8px;" />
+                <span>MS Office</span>
+              </div>
+              <div class="skill-item wireshark">
+                <img src="/assets/icons/wireshark.png" alt="Wireshark" style="width:32px; height:32px; margin-right: 8px;" />
+                <span>Wireshark</span>
+              </div>
+
+              <!-- AI e Design -->
+              <div class="skill-item chatgpt">
+                <img src="/assets/icons/chatgpt.png" alt="ChatGPT" style="width:32px; height:32px; margin-right: 8px;" />
+                <span>ChatGPT</span>
+              </div>
+              <div class="skill-item deepseek">
+                <img src="/assets/icons/deepseek.svg" alt="DeepSeek" style="width:32px; height:32px; margin-right: 8px;" />
+                <span>DeepSeek</span>
+              </div>
+              <div class="skill-item canva">
+                <img src="/assets/icons/canva.png" alt="Canva" style="width:32px; height:32px; margin-right: 8px;" />
+                <span>Canva</span>
+              </div>
             </div>
           </div>
 
-          <div id="education" class="conteudo-tab">
-            <p><strong>2020 - 2023</strong><br>
-               Computer Systems Management and Programming Technician at Escola Secundária de Vendas Novas</p>
-            <p><strong>2024 - Present</strong><br>
-               Cybersecurity Specialist Technician at Centro de Formação Profissional de Évora</p>
+          <div id="educacao" class="conteudo-tab">
+            <p><strong>2020 – 2023</strong><br>Systems Programming & Management Technician at Vendas Novas Secondary School</p>
+            <p><strong>2024 – Present</strong><br>Cybersecurity Specialist Technician at Évora Professional Training Centre</p>
           </div>
 
-          <div id="experience" class="conteudo-tab">
-            <p><strong>05/2022 - 07/2022 / 05/2023 - 07/2023</strong><br>
-               Internship at Casa do Povo de Vendas Novas</p>
-            <p><strong>06/2022 - 09/2022</strong><br>
-               Waiter at Mercado das Bifanas</p>
-            <p><strong>03/2024 - 10/2024</strong><br>
-               Warehouse Operator at Lidl Marateca Logistics Center</p>
+          <div id="experiencia" class="conteudo-tab">
+            <p><strong>05/2022 – 07/2022 / 05/2023 – 07/2023</strong><br>Internship at Casa do Povo de Vendas Novas</p>
+            <p><strong>06/2022 – 09/2022</strong><br>Waiter at Mercado das Bifanas</p>
+            <p><strong>03/2024 – 10/2024</strong><br>Warehouse Operator at Entreposto Lidl Marateca</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Projects -->
-  <section class="projetos" id="projects">
+  <section class="projetos" id="projetos">
     <h2>My Projects</h2>
     <div class="grid">
-      <div class="projeto-card" style="background-image: url('/assets/images/mockup1.png');">
+      <div class="projeto-card" style="background-image: url('/assets/images/mockup1.webp');">
         <div class="projeto-info">
           <h3>Personal Portfolio</h3>
-          <p>This portfolio was developed using HTML, CSS, and JavaScript, with modern animations and responsive design.</p>
+          <p>This portfolio was developed using HTML, CSS and JavaScript, with modern animations and responsive design.</p>
         </div>
       </div>
-      <div class="projeto-card" style="background-image: url('https://www.gov.br/agricultura/pt-br/assuntos/riscos-seguro/imagens/em_construao.png/@@images/image.png');">
+      <div class="projeto-card" style="background-image: url('/assets/images/development.png');">
         <div class="projeto-info">
-          <h3>Project 2</h3>
-          <p>Brief description of project 2. Focused on design and user experience.</p>
+          <h3>Project 2</h3>
+          <p>Brief description of Project 2. It focuses on design and user experience.</p>
         </div>
       </div>
-      <div class="projeto-card" style="background-image: url('https://www.gov.br/agricultura/pt-br/assuntos/riscos-seguro/imagens/em_construao.png/@@images/image.png');">
+      <div class="projeto-card" style="background-image: url('/assets/images/development.png');">
         <div class="projeto-info">
-          <h3>Project 3</h3>
-          <p>Brief description of project 3. An innovative solution for a real market problem.</p>
+          <h3>Project 3</h3>
+          <p>Brief description of Project 3. An innovative solution to a real‑world problem.</p>
         </div>
       </div>
     </div>
 
     <div class="view-more-container">
-      <a href="/en/projects/" class="view-more-btn">View All Projects</a>
+      <a href="projects/" class="view-more-btn">See All Projects</a>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section class="contato" id="contact">
+  <section class="contato" id="contato">
     <div class="contato-left">
       <h2>Contact Me!</h2>
       <div class="contact-info">
@@ -138,7 +200,7 @@
         </div>
         <div class="contact-item">
           <img src="https://img.icons8.com/ios-filled/50/00ffcc/iphone.png" alt="Phone Icon" class="contact-icon">
-          <a href="tel:+351926043609" class="contact-link">+351 926043609</a>
+          <a href="tel:+351926043609" class="contact-link">+351 926 043 609</a>
         </div>
         <div class="social-icons">
           <a href="https://pt.linkedin.com/in/pedrolourenco5" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -149,9 +211,7 @@
         </div>
         <div class="download-cv">
           <a href="/assets/cv.pdf" download="CV_Pedro_Lourenço">
-            <button>
-              <i class="fas fa-file-pdf"></i> Download CV
-            </button>
+            <button><i class="fas fa-file-pdf"></i> Download CV</button>
           </a>
         </div>
       </div>
@@ -160,19 +220,20 @@
     <div class="contato-right">
       <h2>Contact Form</h2>
       <form action="https://formsubmit.co/contacto@pedrolourenco.pt" method="POST">
+        <input type="hidden" name="_subject" value="New Contact via Portfolio!">
+        <input type="hidden" name="_next" value="https://pedrolourenco.pt/thank-you.html">
+        <input type="hidden" name="_captcha" value="false">
         <input type="text" id="nome" name="nome" placeholder="Name" required>
         <input type="email" id="email" name="email" placeholder="Email" required>
         <textarea id="mensagem" name="mensagem" placeholder="Message" rows="5" required></textarea>
-        <button type="submit">
-          <i class="fas fa-envelope"></i> Send
-        </button>
+        <button type="submit"><i class="fas fa-envelope"></i> Send</button> 
       </form>
     </div>
   </section>
 
   <footer class="footer">
     <div class="footer-content">
-      <p>&copy; 2025 Pedro Lourenço | All rights reserved.</p>
+      <p>&copy; 2025 Pedro Lourenço | All rights reserved.</p>
       <div class="social-icons">
         <a href="https://pt.linkedin.com/in/pedrolourenco5" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/pedrolourencoo" target="_blank"><i class="fab fa-github"></i></a>
@@ -183,8 +244,10 @@
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="/script.js"></script>
+
 </body>
 </html>
