--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -4,77 +4,122 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>All Projects | Pedro Lourenço</title>
-  <link rel="icon" href="../../assets/images/icon.png" type="image/png" />
-  <link rel="stylesheet" href="../../style.css" />
+  <!-- Force no cache -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
+  <!-- SEO -->
+  <meta name="description" content="All projects by Pedro Lourenço, Web Developer and Cybersecurity Specialist." />
+  <meta property="og:title" content="Pedro Lourenço | All Projects" />
+  <meta property="og:description" content="Browse all of Pedro Lourenço’s web development and cybersecurity projects." />
+  <meta property="og:image" content="/assets/images/icon.png?v=20250426" />
+  <meta property="og:type" content="website" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/images/icon.png?v=20250426" type="image/png" />
+
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="/style.css?v=20250426" />
+
+  <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <!-- Menu -->
+  <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">
-      <a href="../../">Pedro Lourenço</a>
+      <a href="/en/" style="cursor: pointer;">Pedro Lourenço</a>
     </div>
-
     <div class="menu-icon" onclick="toggleMenu()">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
     </div>
-
-    <ul class="menu">
-      <li><a href="/en/">Home</a></li> <!-- Página inicial, versão em inglês -->
-      <li><a href="/en/#about">About Me</a></li> <!-- Link para a seção 'about' da página inicial, versão em inglês -->
-      <li><a href="">Projects</a></li> <!-- Link para os projetos em inglês -->
-      <li><a href="/en/#contact">Contact</a></li> <!-- Link para a seção 'contact' da página inicial, versão em inglês -->    
+    <ul class="menu" id="menu">
+      <li><a href="/en/" style="cursor: pointer;"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="/en/#about" style="cursor: pointer;"><i class="fas fa-user"></i> About Me</a></li>
+      <li><a href="/en/projects/" style="cursor: pointer;"><i class="fas fa-folder-open"></i> Projects</a></li>
+      <li><a href="/en/#contact" style="cursor: pointer;"><i class="fas fa-envelope"></i> Contact</a></li>
       <li class="lang-selector">
         <div class="current-lang" onclick="toggleDropdown()">
-          <img id="current-flag" src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg" alt="Current Language" style="width: 25px; cursor: pointer;" />
+          <img id="current-flag"
+               src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg"
+               alt="Current Language"
+               style="width:25px; cursor:pointer;" />
+          <span id="current-lang-text">English</span>
+          <span class="arrow">&#9660;</span>
         </div>
         <div id="lang-dropdown" class="lang-dropdown">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg" alt="Portuguese" onclick="window.location.href='/projetos/'" /> <!-- Redireciona para os projetos em português -->
-          <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg" alt="English" onclick="window.location.href=''" /> <!-- Redireciona para os projetos em inglês -->
+          <div onclick="changeLanguage('pt')">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg"
+                 alt="Português"
+                 style="width:20px; cursor:pointer;" />
+            <span>Português</span>
+          </div>
+          <div onclick="changeLanguage('en')">
+            <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg"
+                 alt="English"
+                 style="width:20px; cursor:pointer;" />
+            <span>English</span>
+          </div>
         </div>
       </li>
-    </ul>    
+    </ul>
   </nav>
 
-  <section class="projetos" id="todos-projetos">
-    <h2>Projects</h2>
+  <!-- All Projects Section -->
+  <section class="projetos" id="projects">
+    <h2>All Projects</h2>
     <div class="grid">
-      <div class="projeto-card" style="background-image: url('../../assets/images/mockup1.png');">
-        <div class="projeto-info">
-          <h3>Personal Portfolio</h3>
-          <p>This portfolio was developed using HTML, CSS, and JavaScript, featuring modern animations and responsive design.</p>
+      <a href="https://github.com/pedrolourencoo/portfoliopedrolourenco" target="_blank"
+         style="text-decoration:none; color:inherit; cursor:pointer;">
+        <div class="projeto-card" style="background-image: url('/assets/images/mockup1.webp');">
+          <div class="projeto-info">
+            <h3>Personal Portfolio</h3>
+            <p>This portfolio was built with HTML, CSS, and JavaScript, featuring modern animations and responsive design.</p>
+          </div>
         </div>
-      </div>
+      </a>
+      <a href="#" style="text-decoration:none; color:inherit; cursor:pointer;">
+        <div class="projeto-card" style="background-image: url('/assets/images/desenvolvimento.png');">
+          <div class="projeto-info">
+            <h3>Project 2</h3>
+            <p>Brief description of Project 2, focusing on design and user experience.</p>
+          </div>
+        </div>
+      </a>
+      <a href="#" style="text-decoration:none; color:inherit; cursor:pointer;">
+        <div class="projeto-card" style="background-image: url('/assets/images/desenvolvimento.png');">
+          <div class="projeto-info">
+            <h3>Project 3</h3>
+            <p>Brief description of Project 3, an innovative solution to a real‑world problem.</p>
+          </div>
+        </div>
+      </a>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
       <p>&copy; 2025 Pedro Lourenço | All rights reserved.</p>
       <div class="social-icons">
-        <a href="https://pt.linkedin.com/in/pedrolourenco5" target="_blank">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/pedrolourencoo" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="https://discord.com/users/532902993436344351" target="_blank">
-          <i class="fab fa-discord"></i>
-        </a>
-        <a href="https://www.instagram.com" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://www.facebook.com" target="_blank">
-          <i class="fab fa-facebook"></i>
-        </a>
+        <a href="https://pt.linkedin.com/in/pedrolourenco5" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/pedrolourencoo"      target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://discord.com/users/532902993436344351" target="_blank"><i class="fab fa-discord"></i></a>
+        <a href="https://www.instagram.com"               target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com"                target="_blank"><i class="fab fa-facebook"></i></a>
       </div>
     </div>
   </footer>
 
-  <script src="../../script.js"></script>
+  <!-- GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <!-- Your main script -->
+  <script src="/script.js"></script>
 </body>
 </html>
